# echoflow

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  config.example.json  install-user.sh  pyproject.toml  run.sh  uninstall-user.sh
.github/workflows/: build.yml  deb.yml  pages.yml
debian/: changelog  control  copyright  postinst  rules  shlibs.local
docs/: landing.html
docs/performance/: asr-engine-comparison-report.md  crispasr-benchmark.md  current-crispasr-vs-qwen-asr-c.md  qwen-asr-target-arch-benchmark.md  sensevoice-cpp-benchmark.md  sensevoice-integration-research.md  vad-long-utterance-evaluation.md  voice-latency-optimization-report.md
docs/performance/releases/: 0.2.4.json  0.2.5.json  0.2.6.json
docs/superpowers/plans/: 2026-06-18-in-app-model-download.md  2026-06-18-merged-voice-capsule.md  2026-06-18-qwen-asr-cpp-port.md  2026-06-19-live-stream-asr.md  2026-06-19-model-download-progress-persistence.md  2026-06-19-voice-latency-benchmark.md  2026-06-20-segmented-qwen-final.md  2026-06-21-microphone-source-setting.md  2026-06-24-crispasr-replacement.md  2026-06-30-capsule-live-text-scroll.md  2026-06-30-capsule-notification-material.md  2026-06-30-capsule-window-bounds.md  2026-07-01-vad-long-utterance-reliability.md  2026-07-02-release-performance-gate.md  2026-07-16-first-run-onboarding.md  2026-07-18-onboarding-visual-refresh.md  2026-07-20-onboarding-dtk-refinement.md
docs/superpowers/specs/: 2026-06-18-in-app-model-download-design.md  2026-06-18-merged-voice-capsule-design.md  2026-06-18-qwen-asr-cpp-port-design.md  2026-06-19-model-download-progress-persistence-design.md  2026-06-19-stream-asr-default-design.md  2026-06-19-voice-latency-benchmark-design.md  2026-06-20-segmented-qwen-final-design.md  2026-06-24-crispasr-backend-design.md  2026-06-30-capsule-live-text-scroll-design.md  2026-06-30-capsule-notification-material-design.md  2026-06-30-capsule-window-bounds-design.md  2026-07-01-vad-long-utterance-reliability-design.md  2026-07-02-release-performance-gate-design.md  2026-07-16-first-run-onboarding-design.md  2026-07-18-onboarding-visual-refresh-design.md
echoflow/: __init__.py  __main__.py  asr_runner.py  service.py
fcitx-addon/: CMakeLists.txt  echoflow.conf.in  echoflow.cpp
llama-runtime/: CMakeLists.txt
qml/: EchoFlowTooltip.qml
qwen-asr-runtime/: CMakeLists.txt
scripts/: check-release-performance.py  install-llama-runtime.sh  performance_gate.py  release_evidence.py  release_performance.py  setup-qwen-asr-0.6b.sh  setup-sensevoice-runtime.sh  verify-release-performance-evidence.py
service/: AsrEngine.cpp  AsrEngine.h  AudioSegmenter.cpp  AudioSegmenter.h  CMakeLists.txt  Committer.cpp  Committer.h  Config.cpp  Config.h  CrispAsrEngine.cpp  CrispAsrEngine.h  CrispLiveVoicePipeline.cpp  CrispLiveVoicePipeline.h  CrispSession.cpp  CrispSession.h  CrispStreamAccumulator.cpp  CrispStreamAccumulator.h  Interfaces.h  LiveAudioBuffer.cpp  LiveAudioBuffer.h  LiveDebugRecorder.cpp  LiveDebugRecorder.h  LiveSegmentCoordinator.cpp  LiveSegmentCoordinator.h  ModelCatalog.h  PipeWireLiveVoicePipeline.cpp  PipeWireLiveVoicePipeline.h  Recorder.cpp  Recorder.h  SegmentAsrWorker.cpp  SegmentAsrWorker.h  SegmentTextAccumulator.cpp  SegmentTextAccumulator.h  SelfTest.cpp  SelfTest.h  Server.cpp  Server.h  SileroVadBackend.cpp  SileroVadBackend.h  SingleInstance.cpp  (+12 more)
systemd/user/: echoflow-ui.service  echoflow-ui.service.in  echoflow.service  echoflow.service.in
tests/: CMakeLists.txt  test_asr_engine.cpp  test_asr_runner.py  test_audio_segmenter.cpp  test_benchmark_manifest.cpp  test_committer.cpp  test_config.cpp  test_crisp_stream_accumulator.cpp  test_crispasr_engine.cpp  test_install_scripts.py  test_live_audio_buffer.cpp  test_llama_runtime_build.py  test_model_catalog.cpp  test_model_setup_script.py  test_onboarding_dialog.cpp  test_onboarding_setup_controller.cpp  test_onboarding_state.cpp  test_performance_gate.py  test_recorder_command.cpp  test_release_evidence.py  test_release_performance_driver.py  test_segment_asr_worker.cpp  test_segment_text_accumulator.cpp  test_selftest.cpp  test_service.py  test_single_instance.cpp  test_text_joiner.cpp  test_ui_activation_host.cpp  test_ui_activation_server.cpp  test_ui_host.py  test_vad_backend.cpp  test_vad_metrics.cpp  test_voice_session.cpp
tests/benchmarks/: BenchmarkManifest.cpp  BenchmarkManifest.h  vad_replay_benchmark.cpp  voice_latency_benchmark.cpp
tests/data/vad/: manifest.example.json
tests/spec/: run_spec.sh  test_debian_postinst.sh  test_onboarding_install.sh  test_ui_host_install.sh
ui-host/: CMakeLists.txt  EchoFlowSettings.cpp  EchoFlowSettings.h  ModelDownloadCoordinator.cpp  ModelDownloadCoordinator.h  ModelDownloader.cpp  ModelDownloader.h  ModelRowWidget.cpp  ModelRowWidget.h  ModelSetupAdapter.cpp  ModelSetupAdapter.h  OnboardingDialog.cpp  OnboardingDialog.h  OnboardingIllustration.cpp  OnboardingIllustration.h  OnboardingSetupController.cpp  OnboardingSetupController.h  OnboardingState.cpp  OnboardingState.h  SettingsDialog.cpp  SettingsDialog.h  SetupCommandRunner.cpp  SetupCommandRunner.h  UiActivationHost.cpp  UiActivationHost.h  UiActivationServer.cpp  UiActivationServer.h  echoflow.desktop.in  icons.qrc  main.cpp  onboarding.qrc  qml.qrc  settings-schema.json  settings.qrc
