[project]
name = "echoflow"
version = "0.1.0"
description = "Offline voice input method for deepin users."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "gguf",
    "numpy",
    "onnxruntime",
    "soundfile",
    "srt",
]

[project.optional-dependencies]
dev = []

[project.scripts]
echoflow-service = "echoflow.service:main"
qwen-asr-transcribe = "echoflow.asr_runner:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["echoflow*"]
exclude = ["tests*", "qml*", "systemd*", "fcitx-addon*"]
